--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -165,21 +165,21 @@ tags:
               <div class="form-group has-feedback">
                 <label class="control-label" for="billing-addr1">Address Line 1</label>
                 <input class="form-control" id="billing-addr1" type="text"
-                name="addr1" pattern="^\d+ .*$" required>
+                name="customeraddress1" pattern="^\d+ .*$" required>
                 <span id="billing-addr1_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
             <div class="col-sm-7">
               <div class="form-group has-feedback">
                 <label class="control-label" for="billing-city">City</label>
-                <input class="form-control" id="billing-city" type="text" name="city" required>
+                <input class="form-control" id="billing-city" type="text" name="customercity" required>
                 <span id="billing-city_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
             <div class="col-sm-3">
               <div class="form-group">
                 <label class="control-label" for="billing-state">State</label>
-                <select class="form-control" name="state" id="billing-state">
+                <select class="form-control" name="customerstate" id="billing-state">
                   <option value="">State</option>
                   <%= state_helper %>
                 </select>
@@ -188,7 +188,7 @@ tags:
             <div class="col-sm-2">
               <div class="form-group">
                 <label class="control-label" for="billing-zip">Zip Code</label>
-                <input class="form-control" id="billing-zip" type="text" name="zip"
+                <input class="form-control" id="billing-zip" type="text" name="customerzip"
                 pattern="^[0-9]{5}(?:-[0-9]{4}){0,1}$" required>
                 <span id="billing-zip_glyph" class="glyphicon form-control-feedback"></span>
               </div>
@@ -197,14 +197,14 @@ tags:
               <div class="form-group has-feedback">
                 <label class="control-label" for="billing-email">Email Address</label>
                 <input class="form-control" id="billing-email" type="text"
-                name="email" required>
+                name="customeremail" required>
                 <span id="billing-email_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="form-group has-feedback">
                 <label class="control-label" for="billing-phone">Phone Number</label>
-                <input class="form-control" id="billing-phone" type="text" name="phone" maxlength="14">
+                <input class="form-control" id="billing-phone" type="text" name="customerphone" maxlength="14">
                 <span id="billing-phone_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
@@ -418,3 +418,4 @@ tags:
 <hr class="donate half-rule">
 
 </div>
+
