--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -347,8 +347,7 @@ tags:
       </form>
     </div>
 
-    <div id="transaction-confirm-block" class="center-block"
-      style="display:none;">
+    <div id="transaction-confirm-block" class="center-block" ng-show="breadcrumb == 4">
       <div class="row">
         <div class="col-xs-4 col-xs-offset-4">
           <img src="/static/imgs/pic-content/smile_sign.jpg"
@@ -356,7 +355,21 @@ tags:
         </div>
       </div>
       <p> Keep this smile for your records.</p>
-      <span id="confirm"></span>
+            <p>Amount: {{ vanco.amount }} </p>
+      <p>{{vanco.name_on_card}}, thanks for supporting {{ client.fundid }} the San Antonio Christian Dental Clinic.</p>
+      <p>Donation Date: {{ vanco.startdate }}</p>
+      <p>Confirmation: {{ vanco.transactionref }}</p>
+      <p nf-if="vanco.cardtype">Payment Type: {{ vanco.cardtype }} {{vanco.cardtype}}</p>
+      <p>Account Last Four: {{ last4 }}</p>
+    
+
+    <div>
+      <p ng-repeat="error|vanco.errorlist">
+        <li> errorCodes[{{error}}] </li>
+      </p>
+    </div>
+      
+
       <!--<p class="text-center">The following exemplifies the
       services your donation supports:</p>
       <span id="purchased"></span>-->
