Corrected ng-repeat

--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -364,7 +364,7 @@ tags:
     
 
     <div>
-      <p ng-repeat="error|vanco.errorlist">
+      <p ng-repeat="error in vanco.errorlist">
         <li> errorCodes[{{error}}] </li>
       </p>
     </div>
