--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -9,27 +9,40 @@ tags:
     <h2 class="bs-docs-featurette-title">Special Events</h2>
     <div class="row page">
       <div class="col-md-6">
-          <h3><a href="/get_involved/gala2016/">30th Anniversary Gala</a></h3>
-          <ul class="cross">
-          <li>Thursday, March 3rd, 2016 ~ 6 pm</li>
-          <li>San Antonio Country Club</li>
-          <li>Questions: <a href="mailto:30thanniversary@sachristiandental.org">30thanniversary@sachristiandental.org</a></li>
-          <li><a href="/get_involved/gala2016register">Become a Table Sponsor</a></li>
-          <li><a href="/get_involved/gala2016register">Purchase Individual Tickets</a></li>
-      </div>
-      <div class="col-md-4">
-        <a href="/get_involved/gala2016/">
-          <img src="/static/imgs/events/2016galaSaveTheDateSm.png" alt="Save the date for 2016 Gala, 30th anniverary" class="bs-docs-featurette-img img-responsive">
-        </a>
-      </div>
-
-      <div class="col-md-6">
         <h3>Upcoming Events...</h3> 
-        <p>Clinic Tours:</p>
+        <p>Community Clinics:</p>
         <ul class="cross">
-          <li> Thursday, January 28, 2016 ~ 9:30-10:30 am (breakfast included!)</li>
-          <li> Thursday, February 4, 2016 ~ 11:30-12:30 am (lunch included!)</li>
-          <li> Interested but can't work these dates into your schedule? We'll be happy to arrange a special tour.</li>
+          <li>i.	6th Annual Smiles of Hope Clinic – 2-day Community Clinic:
+
+Hygiene Cleanings - Friday, October 7th from 8:30 AM-4:30 PM
+Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed
+AM and PM Shifts Available
+Breakfast and Lunch Provided
+Register <a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">here</a> to VOLUNTEER
+</li>
+          <li>Dental Procedures – Saturday, October 8th from 8:30 AM-4:30 PM
+Dentists, Dental Assistants, and Administrative Volunteers Needed
+AM and PM Shifts Available
+Breakfast and Lunch Provided
+Register <a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">here</a> to VOLUNTEER
+</li>
+
+<li>
+  2nd Annual Sirviendo Nuestros Héroes/Serving Our Heroes – 2-day Veterans’ Clinic:
+
+Hygiene Cleanings - Friday, November 11th from 8:30 AM-4:30 PM
+Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed
+AM and PM Shifts Available
+Breakfast and Lunch Provided
+Register here to VOLUNTEER
+
+Dental Procedures – Saturday, November 12th from 8:30 AM-4:30 PM
+Dentists, Dental Assistants, and Administrative Volunteers Needed
+AM and PM Shifts Available
+Breakfast and Lunch Provided
+Register here to VOLUNTEER
+</li>
+
           <li> Contact Susan at susan@sachristiandental.org or 210-220-2304 to RSVP for tours or arrange another tour date.</li>
         </ul>
         <p>1st Annual Church Outreach Clinic ~ May 14, 2016</p>
