Added most recent events a/o Sept 2016

--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -9,45 +9,39 @@ tags:
     <h2 class="bs-docs-featurette-title">Special Events</h2>
     <div class="row page">
       <div class="col-md-6">
-        <h3>Upcoming Events...</h3> 
-        <p>Community Clinics:</p>
-        <ul class="cross">
-          <li>i.	6th Annual Smiles of Hope Clinic – 2-day Community Clinic:
+        <h3>Community Clinics:</h3>
+        <h4>6th Annual Smiles of Hope Clinic – 2-day Community Clinic:</h4>
 
-Hygiene Cleanings - Friday, October 7th from 8:30 AM-4:30 PM
-Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed
-AM and PM Shifts Available
-Breakfast and Lunch Provided
-Register <a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">here</a> to VOLUNTEER
-</li>
-          <li>Dental Procedures – Saturday, October 8th from 8:30 AM-4:30 PM
-Dentists, Dental Assistants, and Administrative Volunteers Needed
-AM and PM Shifts Available
-Breakfast and Lunch Provided
-Register <a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">here</a> to VOLUNTEER
-</li>
+<p><b>Hygiene Cleanings</b> - Friday, October 7th from 8:30 AM-4:30 PM</p>
+<p>Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed</p>
+<p>AM and PM Shifts Available</p>
+<p>Breakfast and Lunch Provided</p>
+<p>Register <a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">here</a> to VOLUNTEER</p>
+<br>
+          <p><b>Dental Procedures</b> – Saturday, October 8th from 8:30 AM-4:30 PM</p>
+<p>Dentists, Dental Assistants, and Administrative Volunteers Needed</p>
+<p>AM and PM Shifts Available</p>
+<p>Breakfast and Lunch Provided</p>
+<p>Register <a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">here</a> to VOLUNTEER</p>
+<br><br>
+<h4>2nd Annual Sirviendo Nuestros Héroes/Serving Our Heroes – 2-day Veterans’ Clinic:</h4>
 
-<li>
-  2nd Annual Sirviendo Nuestros Héroes/Serving Our Heroes – 2-day Veterans’ Clinic:
+<p>Hygiene Cleanings - Friday, November 11th from 8:30 AM-4:30 PM</p>
+<p>Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed</p>
+<p>AM and PM Shifts Available</p>
+<p>Breakfast and Lunch Provided</p>
+<p>Register here to VOLUNTEER</p>
+<br>
+<p>Dental Procedures – Saturday, November 12th from 8:30 AM-4:30 PM</p>
+<p>Dentists, Dental Assistants, and Administrative Volunteers Needed</p>
+<p>AM and PM Shifts Available</p>
+<p>Breakfast and Lunch Provided</p>
+<p>Register here to VOLUNTEER</p>
 
-Hygiene Cleanings - Friday, November 11th from 8:30 AM-4:30 PM
-Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed
-AM and PM Shifts Available
-Breakfast and Lunch Provided
-Register here to VOLUNTEER
-
-Dental Procedures – Saturday, November 12th from 8:30 AM-4:30 PM
-Dentists, Dental Assistants, and Administrative Volunteers Needed
-AM and PM Shifts Available
-Breakfast and Lunch Provided
-Register here to VOLUNTEER
-</li>
-
-          <li> Contact Susan at susan@sachristiandental.org or 210-220-2304 to RSVP for tours or arrange another tour date.</li>
-        </ul>
-        <p>1st Annual Church Outreach Clinic ~ May 14, 2016</p>
-        <p>6th Annual Smiles of Hope Clinic ~ October 8th, 2016</p>
-      </div> 
+<br><br>
+    <p>Contact Susan at susan@sachristiandental.org or 210-220-2304 to RSVP for tours or arrange another tour date.</p>
+    
+        </div> 
       <div class="col-md-4">
         <img src="/static/imgs/IMG_1.jpg" alt="Dentists at work" class="bs-docs-featurette-img img-responsive">
       </div>
