--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -16,13 +16,13 @@ tags:
 <p>Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed</p>
 <p>AM and PM Shifts Available</p>
 <p>Breakfast and Lunch Provided</p>
-<p>Register <a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">here</a> to VOLUNTEER</p>
+<p><a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">Register here to VOLUNTEER</a></p>
 <br>
           <p><b>Dental Procedures</b> – Saturday, October 8th from 8:30 AM-4:30 PM</p>
 <p>Dentists, Dental Assistants, and Administrative Volunteers Needed</p>
 <p>AM and PM Shifts Available</p>
 <p>Breakfast and Lunch Provided</p>
-<p>Register <a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">here</a> to VOLUNTEER</p>
+<p><a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">Register here to VOLUNTEER</a></p>
 <br><br>
 <h4>2nd Annual Sirviendo Nuestros Héroes/Serving Our Heroes – 2-day Veterans’ Clinic:</h4>
 
