--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -30,13 +30,13 @@ tags:
 <p>Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed</p>
 <p>AM and PM Shifts Available</p>
 <p>Breakfast and Lunch Provided</p>
-<p>Register here to VOLUNTEER</p>
+<p>Please contact Susan at <a href="mailto:susan@sachristiandental.org">susan@sachristiandental.org</a> or 210-220-2304 to VOLUNTEER</p>
 <br>
 <p>Dental Procedures – Saturday, November 12th from 8:30 AM-4:30 PM</p>
 <p>Dentists, Dental Assistants, and Administrative Volunteers Needed</p>
 <p>AM and PM Shifts Available</p>
 <p>Breakfast and Lunch Provided</p>
-<p>Register here to VOLUNTEER</p>
+<p>Please contact Susan at <a href="mailto:susan@sachristiandental.org">susan@sachristiandental.org</a> or 210-220-2304 to VOLUNTEER</p>
 
 <br><br>
     <p>Contact Susan at susan@sachristiandental.org or 210-220-2304 to RSVP for tours or arrange another tour date.</p>
