--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -26,13 +26,13 @@ tags:
 <br><br>
 <h4>2nd Annual Sirviendo Nuestros Héroes/Serving Our Heroes – 2-day Veterans’ Clinic:</h4>
 
-<p>Hygiene Cleanings - Friday, November 11th from 8:30 AM-4:30 PM</p>
+<p><b>Hygiene Cleanings</b> - Friday, November 11th from 8:30 AM-4:30 PM</p>
 <p>Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed</p>
 <p>AM and PM Shifts Available</p>
 <p>Breakfast and Lunch Provided</p>
 <p>Please contact Susan at <a href="mailto:susan@sachristiandental.org">susan@sachristiandental.org</a> or 210-220-2304 to VOLUNTEER</p>
 <br>
-<p>Dental Procedures – Saturday, November 12th from 8:30 AM-4:30 PM</p>
+<p><b>Dental Procedures</b> – Saturday, November 12th from 8:30 AM-4:30 PM</p>
 <p>Dentists, Dental Assistants, and Administrative Volunteers Needed</p>
 <p>AM and PM Shifts Available</p>
 <p>Breakfast and Lunch Provided</p>
