--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -25,7 +25,7 @@ tags:
 <p><a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">Register here to VOLUNTEER</a></p>
 <br><br>
 
-<p><img src="/static/imgs/events/Banner - VE - Sirviendo Los Nuestros Heroes Logo.jpg"></p>
+<p><img src="/static/imgs/events/Banner - VE - Sirviendo Los Nuestros Heroes Logo.jpg" class="bs-docs-featurette-img img-responsive"></p>
 <h4>2nd Annual Sirviendo Nuestros Héroes/Serving Our Heroes – 2-day Veterans’ Clinic:</h4>
 
 <p><b>Hygiene Cleanings</b> - Friday, November 11th from 8:30 AM-4:30 PM</p>
