--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -23,7 +23,8 @@ tags:
 <p>AM and PM Shifts Available</p>
 <p>Breakfast and Lunch Provided</p>
 <p><a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">Register here to VOLUNTEER</a></p>
-<br><br>
+</div>
+<div class="row page">
 
 <p><img src="/static/imgs/events/Banner - VE - Sirviendo Los Nuestros Heroes Logo.jpg" class="bs-docs-featurette-img img-responsive"></p>
 <h4>2nd Annual Sirviendo Nuestros Héroes/Serving Our Heroes – 2-day Veterans’ Clinic:</h4>
@@ -45,7 +46,7 @@ tags:
     
         </div> 
       <div class="col-md-4">
-        <img src="/static/imgs/IMG_1.jpg" alt="Dentists at work" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/events/VE - PIC - 1 - gsahda logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
       </div>
     </div>
 </div>
