--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -12,39 +12,40 @@ tags:
         <h3>Community Clinics:</h3>
         <h4>6th Annual Smiles of Hope Clinic – 2-day Community Clinic:</h4>
 
-<p><b>Hygiene Cleanings</b> - Friday, October 7th from 8:30 AM-4:30 PM</p>
-<p>Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed</p>
-<p>AM and PM Shifts Available</p>
-<p>Breakfast and Lunch Provided</p>
-<p><a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">Register here to VOLUNTEER</a></p>
-<br>
-          <p><b>Dental Procedures</b> – Saturday, October 8th from 8:30 AM-4:30 PM</p>
-<p>Dentists, Dental Assistants, and Administrative Volunteers Needed</p>
-<p>AM and PM Shifts Available</p>
-<p>Breakfast and Lunch Provided</p>
-<p><a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">Register here to VOLUNTEER</a></p>
-</div>
-<div class="row page">
+        <p><b>Hygiene Cleanings</b> - Friday, October 7th from 8:30 AM-4:30 PM</p>
+        <p>Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed</p>
+        <p>AM and PM Shifts Available</p>
+        <p>Breakfast and Lunch Provided</p>
+        <p><a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">Register here to VOLUNTEER</a></p>
+        <br>
+        <p><b>Dental Procedures</b> – Saturday, October 8th from 8:30 AM-4:30 PM</p>
+        <p>Dentists, Dental Assistants, and Administrative Volunteers Needed</p>
+        <p>AM and PM Shifts Available</p>
+        <p>Breakfast and Lunch Provided</p>
+        <p><a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">Register here to VOLUNTEER</a></p>
+      </div>
+    </div>
+    <div class="row page">
+      <div class="col-md-6">
+        <p><img src="/static/imgs/events/Banner - VE - Sirviendo Los Nuestros Heroes Logo.jpg" class="bs-docs-featurette-img img-responsive"></p>
+        <h4>2nd Annual Sirviendo Nuestros Héroes/Serving Our Heroes – 2-day Veterans’ Clinic:</h4>
+      
+        <p><b>Hygiene Cleanings</b> - Friday, November 11th from 8:30 AM-4:30 PM</p>
+        <p>Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed</p>
+        <p>AM and PM Shifts Available</p>
+        <p>Breakfast and Lunch Provided</p>
+        <p>Please contact Susan at <a href="mailto:susan@sachristiandental.org">susan@sachristiandental.org</a> or 210-220-2304 to VOLUNTEER</p>
+        <br>
+        <p><b>Dental Procedures</b> – Saturday, November 12th from 8:30 AM-4:30 PM</p>
+        <p>Dentists, Dental Assistants, and Administrative Volunteers Needed</p>
+        <p>AM and PM Shifts Available</p>
+        <p>Breakfast and Lunch Provided</p>
+        <p>Please contact Susan at <a href="mailto:susan@sachristiandental.org">susan@sachristiandental.org</a> or 210-220-2304 to VOLUNTEER</p>
 
-<p><img src="/static/imgs/events/Banner - VE - Sirviendo Los Nuestros Heroes Logo.jpg" class="bs-docs-featurette-img img-responsive"></p>
-<h4>2nd Annual Sirviendo Nuestros Héroes/Serving Our Heroes – 2-day Veterans’ Clinic:</h4>
-
-<p><b>Hygiene Cleanings</b> - Friday, November 11th from 8:30 AM-4:30 PM</p>
-<p>Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed</p>
-<p>AM and PM Shifts Available</p>
-<p>Breakfast and Lunch Provided</p>
-<p>Please contact Susan at <a href="mailto:susan@sachristiandental.org">susan@sachristiandental.org</a> or 210-220-2304 to VOLUNTEER</p>
-<br>
-<p><b>Dental Procedures</b> – Saturday, November 12th from 8:30 AM-4:30 PM</p>
-<p>Dentists, Dental Assistants, and Administrative Volunteers Needed</p>
-<p>AM and PM Shifts Available</p>
-<p>Breakfast and Lunch Provided</p>
-<p>Please contact Susan at <a href="mailto:susan@sachristiandental.org">susan@sachristiandental.org</a> or 210-220-2304 to VOLUNTEER</p>
-
-<br><br>
-    <p>Contact Susan at susan@sachristiandental.org or 210-220-2304 to RSVP for tours or arrange another tour date.</p>
+        <br><br>
+        <p>Contact Susan at susan@sachristiandental.org or 210-220-2304 to RSVP for tours or arrange another tour date.</p>
     
-        </div> 
+      </div> 
       <div class="col-md-4">
         <img src="/static/imgs/events/VE - PIC - 1 - gsahda logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
       </div>
