--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -48,6 +48,10 @@ tags:
       </div> 
       <div class="col-md-4">
         <img src="/static/imgs/events/VE - PIC - 1 - gsahda logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/events/VE - PIC - 1 - gsahda logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/events/VE - PIC - 1 - gsahda logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/events/VE - PIC - 1 - gsahda logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/events/VE - PIC - 1 - gsahda logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
       </div>
     </div>
 </div>
