--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -46,12 +46,20 @@ tags:
         <p>Contact Susan at susan@sachristiandental.org or 210-220-2304 to RSVP for tours or arrange another tour date.</p>
     
       </div> 
-      <div class="col-md-4">
+      <div class="col-md-3">
         <img src="/static/imgs/events/VE - PIC - 1 - gsahda logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
-        <img src="/static/imgs/events/VE - PIC - 1 - gsahda logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
-        <img src="/static/imgs/events/VE - PIC - 1 - gsahda logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
-        <img src="/static/imgs/events/VE - PIC - 1 - gsahda logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
-        <img src="/static/imgs/events/VE - PIC - 1 - gsahda logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
+      </div>
+      <div class="col-md-3">
+        <img src="/static/imgs/events/VE - PIC - 2 - SACDC Small Logo.png" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
+      </div>
+      <div class="col-md-3">
+        <img src="/static/imgs/events/VE - PIC - 3 - SA Metro Health Logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
+      </div>
+      <div class="col-md-3">
+        <img src="/static/imgs/events/VE - PIC - 4 - SA District Dental HYGIENISTS Society.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
+      </div>
+      <div class="col-md-3">
+        <img src="/static/imgs/events/VE - PIC - 5 - sadds_logo_vec_5-24-12 cropped.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
       </div>
     </div>
 </div>
