--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -24,6 +24,14 @@ tags:
         <p>Breakfast and Lunch Provided</p>
         <p><a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">Register here to VOLUNTEER</a></p>
       </div>
+      <div class="col-md-3">
+        <img src="/static/imgs/events/SOH - PIC - 1 - SADDS Logo.jpg" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/events/SOH - PIC - 2 - SACDC Logo.png" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/events/SOH - PIC - 3 - MetroHealth Logo.jpg" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/events/SOH - PIC - 4 - SADDHS Logo.jpg" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/events/SOH - PIC - 5 - SADDS Alliance Logo.jpg" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/events/SOH - PIC - 6 - GSAHDA Logo.jpg" class="bs-docs-featurette-img img-responsive">
+      </div>
     </div>
     <div class="row page">
       <div class="col-md-6">
