--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -26,10 +26,20 @@ tags:
       </div>
       <div class="col-md-3">
         <img src="/static/imgs/events/SOH - PIC - 1 - SADDS Logo.jpg" class="bs-docs-featurette-img img-responsive">
+      </div>
+      <div class="col-md-3">
         <img src="/static/imgs/events/SOH - PIC - 2 - SACDC Logo.png" class="bs-docs-featurette-img img-responsive">
+      </div>
+      <div class="col-md-3">
         <img src="/static/imgs/events/SOH - PIC - 3 - MetroHealth Logo.jpg" class="bs-docs-featurette-img img-responsive">
+      </div>
+      <div class="col-md-3">
         <img src="/static/imgs/events/SOH - PIC - 4 - SADDHS Logo.jpg" class="bs-docs-featurette-img img-responsive">
+      </div>
+      <div class="col-md-3">
         <img src="/static/imgs/events/SOH - PIC - 5 - SADDS Alliance Logo.jpg" class="bs-docs-featurette-img img-responsive">
+      </div>
+      <div class="col-md-3">
         <img src="/static/imgs/events/SOH - PIC - 6 - GSAHDA Logo.jpg" class="bs-docs-featurette-img img-responsive">
       </div>
     </div>
