--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -27,8 +27,8 @@ tags:
       <div class="col-md-3">
         <img src="/static/imgs/events/SOH - PIC - 1 - SADDS Logo.jpg" class="bs-docs-featurette-img img-responsive">
       </div>
-      <div class="col-md-1">
-        <img src="/static/imgs/events/SOH - PIC - 2 - SACDC Logo.png" class="bs-docs-featurette-img img-responsive">
+      <div class="col-md-2">
+        <img src="/static/imgs/sa-cdc_logo2_sm.gif" class="bs-docs-featurette-img img-responsive">
       </div>
       <div class="col-md-3">
         <img src="/static/imgs/events/SOH - PIC - 3 - MetroHealth Logo.jpg" class="bs-docs-featurette-img img-responsive">
@@ -68,7 +68,7 @@ tags:
         <img src="/static/imgs/events/VE - PIC - 1 - gsahda logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
       </div>
       <div class="col-md-3">
-        <img src="/static/imgs/events/VE - PIC - 2 - SACDC Small Logo.png" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/sa-cdc_logo2_sm.gif" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
       </div>
       <div class="col-md-3">
         <img src="/static/imgs/events/VE - PIC - 3 - SA Metro Health Logo.jpg" alt="GSAHDA" class="bs-docs-featurette-img img-responsive">
