--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -251,7 +251,7 @@ tags:
             <div class="col-sm-offset-4 col-xs-12 col-sm-4">
               <div class="form-group has-feedback">
                 <label class="control-label" for="acctnumber">Credit Card Number</label>
-                <input class="form-control" id="acctnumber" ng-model="payment.accountnumber" name="accountnumber" type="text" size="16" x-autocompletetype="cc-number" ng-pattern="/^[0-9]{15,16}$/" required>
+                <input class="form-control" id="acctnumber" ng-model="vanco.accountnumber" name="accountnumber" type="text" size="16" x-autocompletetype="cc-number" ng-pattern="/^[0-9]{15,16}$/" required>
                 <span id="acctnumber_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
@@ -260,7 +260,7 @@ tags:
             </div>
             <div class="col-sm-offset-4 col-xs-12 col-sm-2">
               <div class="form-group has-feedback">
-                <input class="form-control" type="number" id="cvv" ng-model="payment.cvvcode" name="cvvcode" ng-pattern="/^[0-9]{3,4}$/" required>
+                <input class="form-control" type="number" id="cvv" ng-model="vanco.cvvcode" name="cvvcode" ng-pattern="/^[0-9]{3,4}$/" required>
                 <span id="cvv_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
@@ -268,7 +268,7 @@ tags:
             <div class="col-xs-offset-4 col-xs-8"><label>Expiration Date</label></div>
             <div class="col-sm-offset-4 col-xs-6 col-sm-2">
               <div class="form-group">
-                <select class="form-control" id="expmth" name="expmonth" ng-model="payment.expmonth" required>
+                <select class="form-control" id="expmth" name="expmonth" ng-model="vanco.expmonth" required>
                   <option value="">Month</option>
                   <% for month in (1..12) %>
                   <option value="<%= month %>"> <%= month %> </option>
@@ -278,7 +278,7 @@ tags:
             </div>
             <div class="col-xs-6 col-sm-2">
               <div class="form-group">
-                <select class="form-control" id="expyr" name="expyear" ng-model="payment.expyear" required>
+                <select class="form-control" id="expyr" name="expyear" ng-model="vanco.expyear" required>
                   <option value="">Year</option>
                   <% for year in (Time.new.year..(Time.new.year + 5)) %>
                   <option value="<%= year.to_s[2..3] %>"> <%= year %> </option>
