--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -12,13 +12,13 @@ tags:
         <h3>Community Clinics:</h3>
         <h4>6th Annual Smiles of Hope Clinic – 2-day Community Clinic:</h4>
 
-        <p><b>Hygiene Cleanings</b> - Friday, October 7th from 8:00 AM-5:00 PM</p>
+        <p><b>Hygiene Cleanings</b> - Friday, October 7th from 8:30 AM-4:30 PM</p>
         <p>Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed</p>
         <p>AM and PM Shifts Available</p>
         <p>Breakfast and Lunch Provided</p>
         <p><a href="http://www.sadds.org/EventsCalendarDetail.asp?ID=237">Register here to VOLUNTEER</a></p>
         <br>
-        <p><b>Dental Procedures</b> – Saturday, October 8th from 8:00 AM-5:00 PM</p>
+        <p><b>Dental Procedures</b> – Saturday, October 8th from 8:30 AM-4:30 PM</p>
         <p>Dentists, Dental Assistants, and Administrative Volunteers Needed</p>
         <p>AM and PM Shifts Available</p>
         <p>Breakfast and Lunch Provided</p>
@@ -49,17 +49,17 @@ tags:
         <p><img src="/static/imgs/events/Banner - VE - Sirviendo Los Nuestros Heroes Logo.jpg" class="bs-docs-featurette-img img-responsive"></p>
         <h4>2nd Annual Sirviendo Nuestros Héroes/Serving Our Heroes – 2-day Veterans’ Clinic:</h4>
       
-        <p><b>Hygiene Cleanings</b> - Friday, November 11th from 8:30 AM-4:30 PM</p>
+        <p><b>Hygiene Cleanings</b> - Friday, November 11th from 8:00 AM-5:00 PM</p>
         <p>Dental Hygienists, Dental Assistants, and Administrative Volunteers Needed</p>
         <p>AM and PM Shifts Available</p>
         <p>Breakfast and Lunch Provided</p>
-        <p>Please contact Susan at <a href="mailto:susan@sachristiandental.org">susan@sachristiandental.org</a> or 210-220-2304 to VOLUNTEER</p>
+        <p>Please contact Connie at <a href="mailto:connie@sachristiandental.org">connie@sachristiandental.org</a> or 210-220-2312 to VOLUNTEER</p>
         <br>
-        <p><b>Dental Procedures</b> – Saturday, November 12th from 8:30 AM-4:30 PM</p>
+        <p><b>Dental Procedures</b> – Saturday, November 12th from 8:00 AM-5:00 PM</p>
         <p>Dentists, Dental Assistants, and Administrative Volunteers Needed</p>
         <p>AM and PM Shifts Available</p>
         <p>Breakfast and Lunch Provided</p>
-        <p>Please contact Susan at <a href="mailto:susan@sachristiandental.org">susan@sachristiandental.org</a> or 210-220-2304 to VOLUNTEER</p>
+        <p>Please contact Connie at <a href="mailto:connie@sachristiandental.org">connie@sachristiandental.org</a> or 210-220-2312 to VOLUNTEER</p>
 
         <br><br>
         <p>Contact Susan at susan@sachristiandental.org or 210-220-2304 to RSVP for tours or arrange another tour date.</p>
