--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -17,14 +17,14 @@ tags:
         <p>AM and PM Shifts Available</p>
         <p>Breakfast and Lunch Provided</p>
         <p><a href="/get_involved/events/veteransclinic2016">Register here to VOLUNTEER</a></p>
-        <p>Please contact Connie at <a href="mailto:connie@sachristiandental.org">connie@sachristiandental.org</a> or 210-220-2312 with any questions</p>
+        <p>Questions contact Connie at <a href="mailto:connie@sachristiandental.org">connie@sachristiandental.org</a> or 210-220-2312</p>
         <br>
         <p><b>Dental Procedures</b> – Saturday, November 12th from 8:00 AM-5:00 PM</p>
         <p>Dentists, Dental Assistants, and Administrative Volunteers Needed</p>
         <p>AM and PM Shifts Available</p>
         <p>Breakfast and Lunch Provided</p>
         <p><a href="/get_involved/events/veteransclinic2016">Register here to VOLUNTEER</a></p>
-        <p>Please contact Connie at <a href="mailto:connie@sachristiandental.org">connie@sachristiandental.org</a> or 210-220-2312 with any questions</p>
+        <p>Questions contact Connie at <a href="mailto:connie@sachristiandental.org">connie@sachristiandental.org</a> or 210-220-2312</p>
 
         <br><br>
         <p>Contact Susan at susan@sachristiandental.org or 210-220-2304 to RSVP for tours or arrange another tour date.</p>
