--- a/content/get_involved/donations_proto.html
+++ b/content/get_involved/donations_proto.html
@@ -2,7 +2,8 @@
 title: Donations Prototype
 group: none
 precedence: 1
-tags:  - service 
+tags:
+  - service 
 ---
 
 <div class="bs-docs-featurette">
