--- a/content/get_involved/donations_proto.html
+++ b/content/get_involved/donations_proto.html
@@ -7,6 +7,6 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-  <script src='embed.idonate.com/idonate.js'></script>
+  <script src='//embed.idonate.com/idonate.js'></script>
   <div data-idonate-embed='16ff8d8b-5e59-46dc-b336-c7b05277f18e'></div>
 </div>
