Update and rename donations_proto.html to donations.html

--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -1,9 +1,9 @@
 ---
-title: Donations Prototype
-group: none
+title: Donations
+group: get_involved
 precedence: 1
 tags:
-  - no-link
+  - service
 ---
 
 <div class="bs-docs-featurette">
