--- a/content/privacy.html
+++ b/content/privacy.html
@@ -1,3 +1,10 @@
+---
+title: Privacy
+precedence: 100
+tags:
+  - no-link
+---
+
 Privacy & Use Policy
 PRIVACY POLICY AND TERMS OF USE RELATING TO YOUR USE OF THIS SITE
 Effective October 5, 2016
