--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -8,7 +8,7 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-  <img src="/static/imgs/events/" class="bs-docs-featurette-img img-responsive">
+  <img src="/static/imgs/events/Facebook-Cover.png" class="bs-docs-featurette-img img-responsive">
   <script src='//embed.idonate.com/idonate.js'></script>
   <div data-idonate-embed='16ff8d8b-5e59-46dc-b336-c7b05277f18e'></div>
 </div>
