--- a/content/index.html
+++ b/content/index.html
@@ -6,58 +6,32 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-	<div class="item">
-
-        <img src="static/imgs/pic-content/Web-Header.png" alt="C">
-
-          <div class="carousel-caption captionleft">
-
-            <h3 class="carousel frontpage">The Need is Great</h3>
-
-            <h4 class="carousel">When Monica needed emergency extractions, SACDC jumped in to help</h4>
-
-                <a href="/get_involved/donations/" class="btn btn-primary active" role="button" onclick="ga('send', {
-
-		'hitType': 'event',
-
-		'eventCategory': 'donation',
-
-		'eventAction': 'CarouselToDonation-Monica',
-
-		'eventValue': 10
-
-	});">Donate Now</a>
-
-                <a href="/stories/story3/" class="btn btn-primary active" role="button">Learn More</a>
-
-                <div style="padding-top: 15px;">
-
-                  <a href="/get_involved/gala2016" class="btn btn-primary active" role="button">30th Anniversary</a>
-
-                </div>
-
-          </div>
-
-          <div class="carousel-caption captionsmallleft">
-
-              <h4 class="captionsmall">The Need is Great</h4>
-
-          </div>
-
-          <div class="carousel-caption captionattributionright">
-
-              <a
-
-                href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode"
-
-              target="_blank">Photo by Laurent Lavi Lazzeresky</a>
-
-          </div>
-
-        </div>
   <div id="show" class="row carousel slide" data-ride="carousel" data-interval="1200000">
     <!-- Wrapper for slides -->
+	  
     <div class="carousel-inner">
+	    <div class="item">
+        <img src="static/imgs/pic-content/Web-Header.png" alt="C">
+          <div class="carousel-caption captionleft">
+            <h3 class="carousel frontpage">The Need is Great</h3>
+            <h4 class="carousel">When Monica needed emergency extractions, SACDC jumped in to help</h4>
+                <a href="/get_involved/donations/" class="btn btn-primary active" role="button" onclick="ga('send', {
+		'hitType': 'event',
+		'eventCategory': 'donation',
+		'eventAction': 'CarouselToDonation-Monica',
+		'eventValue': 10 });">Donate Now</a>
+                <a href="/stories/story3/" class="btn btn-primary active" role="button">Learn More</a>
+                <div style="padding-top: 15px;">
+                  <a href="/get_involved/gala2016" class="btn btn-primary active" role="button">30th Anniversary</a>
+                </div>
+          </div>
+          <div class="carousel-caption captionsmallleft">
+              <h4 class="captionsmall">The Need is Great</h4>
+          </div>
+          <div class="carousel-caption captionattributionright">
+              <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode" target="_blank">Photo by Laurent Lavi Lazzeresky</a>
+          </div>
+        </div>
       <div class="item">
         <img src="static/imgs/pic-content/frontpage1.jpg" alt="A">
           <div class="carousel-caption captionleft">
