--- a/content/index.html
+++ b/content/index.html
@@ -12,20 +12,16 @@ tags:
     <div class="carousel-inner">
 	    <div class="item">
         <img src="static/imgs/pic-content/Web-Header.png" alt="C">
-          <div class="carousel-caption captionleft">
-            <h3 class="carousel frontpage">The Need is Great</h3>
-            <h4 class="carousel">When Monica needed emergency extractions, SACDC jumped in to help</h4>
+          <div class="carousel-caption captionright">
+            <h3 class="carousel frontpage">Every dollar becomes two</h3>
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button" onclick="ga('send', {
 		'hitType': 'event',
 		'eventCategory': 'donation',
 		'eventAction': 'CarouselToDonation-Monica',
 		'eventValue': 10 });">Donate Now</a>
                 <a href="/stories/story3/" class="btn btn-primary active" role="button">Learn More</a>
-                <div style="padding-top: 15px;">
-                  <a href="/get_involved/gala2016" class="btn btn-primary active" role="button">30th Anniversary</a>
-                </div>
           </div>
-          <div class="carousel-caption captionsmallleft">
+          <div class="carousel-caption captionsmallright">
               <h4 class="captionsmall">The Need is Great</h4>
           </div>
           <div class="carousel-caption captionattributionright">
