--- a/content/index.html
+++ b/content/index.html
@@ -13,13 +13,12 @@ tags:
 	    <div class="item">
         <img src="static/imgs/pic-content/Web-Header.png" alt="C">
           <div class="carousel-caption captionright">
-            <h3 class="carousel frontpage">Every dollar becomes two</h3>
+            <h4 class="carousel frontpage">Every dollar becomes two!</h4>
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button" onclick="ga('send', {
 		'hitType': 'event',
 		'eventCategory': 'donation',
 		'eventAction': 'CarouselToDonation-Monica',
 		'eventValue': 10 });">Donate Now</a>
-                <a href="/stories/story3/" class="btn btn-primary active" role="button">Learn More</a>
           </div>
           <div class="carousel-caption captionsmallright">
               <h4 class="captionsmall">The Need is Great</h4>
