--- a/content/index.html
+++ b/content/index.html
@@ -14,7 +14,7 @@ tags:
         <img src="static/imgs/pic-content/Web-Header.png" alt="C">
           <div class="carousel-caption captionright">
             <h2 class="carousel frontpage">Every dollar becomes two!</h2>
-		  <div data-idonate-embed='07b2566a-2614-4323-913b-1f1aac50908a'></div>
+		  <div class="carousel frontpage" data-idonate-embed='07b2566a-2614-4323-913b-1f1aac50908a'></div>
 <script src='https://embed.idonate.com/idonate.js'></script>
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button" onclick="ga('send', {
 		'hitType': 'event',
