--- a/content/index.html
+++ b/content/index.html
@@ -106,7 +106,8 @@ tags:
   </div>
   
   <script>
-    var active = Math.floor(Math.random() * 3);
+    //var active = Math.floor(Math.random() * 3);
+    var active = 0;
     $( "div.item" ).eq(active).addClass("active");
     //console.log(active);
   </script>
