--- a/content/index.html
+++ b/content/index.html
@@ -13,8 +13,7 @@ tags:
       <div class="item">
         <img src="static/imgs/pic-content/Web-Header.png" alt="C">
           <div class="carousel-caption captionright">
-            <h2 class="carousel frontpage">Every dollar becomes two!
-	    <div class="carousel frontpage" data-idonate-embed='07b2566a-2614-4323-913b-1f1aac50908a'></div></h2>
+	    <div class="carousel frontpage" data-idonate-embed='07b2566a-2614-4323-913b-1f1aac50908a'></div>
             <script src='https://embed.idonate.com/idonate.js'></script>
           </div>
           <div class="carousel-caption captionsmallright">
