--- a/content/index.html
+++ b/content/index.html
@@ -10,6 +10,20 @@ tags:
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item">
+        <img src="static/imgs/pic-content/Web-Header.png" alt="C">
+          <div class="carousel-caption captionright">
+	    <h2 class="carousel frontpage">Every dollar becomes two!</h2>
+	    <div class="hidden-xs hidden-sm" data-idonate-embed='07b2566a-2614-4323-913b-1f1aac50908a'></div>
+            <script src='https://embed.idonate.com/idonate.js'></script>
+          </div>
+          <div class="carousel-caption captionsmallright">
+              <h4 class="captionsmall">The Need is Great</h4>
+          </div>
+          <div class="carousel-caption captionattributionright">
+              <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode" target="_blank">Photo by Laurent Lavi Lazzeresky</a>
+          </div>
+        </div>
+      <div class="item">
         <img src="static/imgs/pic-content/frontpage1.jpg" alt="A">
           <div class="carousel-caption captionleft">
             <h3 class="carousel frontpage">Help us Bring Back A Smile</h3>
@@ -77,7 +91,8 @@ tags:
   </div>
   
   <script>
-    var active = Math.floor(Math.random() * 3);
+    //var active = Math.floor(Math.random() * 3);
+    var active = 0;
     $( "div.item" ).eq(active).addClass("active");
     //console.log(active);
   </script>
