--- a/content/index.html
+++ b/content/index.html
@@ -5,6 +5,7 @@ tags:
   - sa-cdc
 ---
 
+<script src='https://embed.idonate.com/idonate.js'></script>
 <div class="bs-docs-featurette">
   <div id="show" class="row carousel slide" data-ride="carousel" data-interval="1200000">
     <!-- Wrapper for slides -->
@@ -14,7 +15,6 @@ tags:
           <div class="carousel-caption captionright">
 	    <h2 class="carousel frontpage">Every dollar becomes two!</h2>
 	    <div class="hidden-xs hidden-sm" data-idonate-embed='07b2566a-2614-4323-913b-1f1aac50908a'></div>
-            <script src='https://embed.idonate.com/idonate.js'></script>
           </div>
         </div>
       <div class="item">
@@ -91,6 +91,12 @@ tags:
     //console.log(active);
   </script>
 
+<div class="hidden-lg hidden-md row">
+  <div class="col-md-10 col-md-offset-1">
+    <div data-idonate-embed='07b2566a-2614-4323-913b-1f1aac50908a'></div>
+  </div>
+</div>
+	
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <h3 class="frontpage">San Antonio Christian Dental Clinic is on a mission to extend Christ's healing by providing charitable dental care to underserved Bexar County adults</h3>
