--- a/content/index.html
+++ b/content/index.html
@@ -14,6 +14,7 @@ tags:
           <div class="carousel-caption captionright">
 	    <h2 class="carousel frontpage">Every dollar becomes two!</h2>
 	    <div class="hidden-xs hidden-sm" data-idonate-embed='07b2566a-2614-4323-913b-1f1aac50908a'></div>
+	    <script src='https://embed.idonate.com/idonate.js'></script>
           </div>
         </div>
       <div class="item">
