--- a/content/index.html
+++ b/content/index.html
@@ -93,6 +93,7 @@ tags:
 
 <div class="hidden-lg hidden-md row">
   <div class="col-md-10 col-md-offset-1">
+	  <script src='https://embed.idonate.com/idonate.js'></script><div data-idonate-embed='44718fae-d435-4d2a-9cff-332f838c1463'></div>
   </div>
 </div>
 	
