--- a/content/index.html
+++ b/content/index.html
@@ -4,7 +4,7 @@ precedence: 100
 tags:
   - sa-cdc
 ---
-
+<script src='https://embed.idonate.com/idonate.js'></script>
 <div class="bs-docs-featurette">
   <div id="show" class="row carousel slide" data-ride="carousel" data-interval="1200000">
     <!-- Wrapper for slides -->
@@ -14,7 +14,6 @@ tags:
           <div class="carousel-caption captionright">
 	    <h2 class="carousel frontpage">Every dollar becomes two!</h2>
 	    <div class="hidden-xs hidden-sm" data-idonate-embed='07b2566a-2614-4323-913b-1f1aac50908a'></div>
-	    <script src='https://embed.idonate.com/idonate.js'></script>
           </div>
         </div>
       <div class="item">
@@ -91,9 +90,9 @@ tags:
     //console.log(active);
   </script>
 
-<div class="hidden-lg hidden-md row">
-  <div class="col-md-10 col-md-offset-1">
-	  <script src='https://embed.idonate.com/idonate.js'></script><div data-idonate-embed='44718fae-d435-4d2a-9cff-332f838c1463'></div>
+<div class="hidden-lg hidden-md container-fluid">
+  <div class="row">
+    <div data-idonate-embed='44718fae-d435-4d2a-9cff-332f838c1463'></div>
   </div>
 </div>
 	
