--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -11,8 +11,8 @@ tags:
   <script src='//embed.idonate.com/idonate.js'></script>
   <!--<div data-idonate-embed='16ff8d8b-5e59-46dc-b336-c7b05277f18e'></div>-->
   <div class="row">
-    <div class="col-md-8"><img src="/static/imgs/events/Facebook-Cover.png" class="bs-docs-featurette-img img-responsive"></div>
-    <div class="col-md-4" data-idonate-embed='44718fae-d435-4d2a-9cff-332f838c1463'></div>
+    <div class="col-md-8 col-xs-12"><img src="/static/imgs/events/Facebook-Cover.png" class="bs-docs-featurette-img img-responsive"></div>
+    <div class="col-md-4 hidden-xs hidden-sm" data-idonate-embed='44718fae-d435-4d2a-9cff-332f838c1463'></div>
   </div>
   <div data-idonate-embed='78fe730e-0425-4bba-8e9e-fac6b9c30114'></div>
 </div>
