--- a/content/clinic_info/partners.html
+++ b/content/clinic_info/partners.html
@@ -5,7 +5,6 @@ tags:
   - none
 ---
 
-
 <div class="bs-docs-featurette">
   <h3 class="bs-docs-featurette-title">Partnering Organizations</h3>
 
@@ -69,7 +68,7 @@ tags:
         img-responsive" src="/static/imgs/logos/Baptist.png"></a>
       </p>
       <h3>Baptist Health Foundation</h3>
-      <h5>The  Baptist Health Foundation strives to become a philanthropic change-agent leader whose grants will make a difference in meeting the vast unmet healthcare needs in our region. We join with our distinguished funding partners in “Improving the Health of Our Community.”</h5>
+      <h5>The  Baptist Health Foundation strives to become a philanthropic change-agent leader whose grants will make a difference in meeting the vast unmet healthcare needs in our region. We join with our distinguished funding partners in "Improving the Health of Our Community."</h5>
     </div>
   </div>
 </div>
