removed invalid chars

--- a/content/privacy.html
+++ b/content/privacy.html
@@ -45,7 +45,7 @@ at&nbsp;</font></font></font><font color="#808080"><font face="Arial, serif"><fo
 In this policy, “</font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><i><font color="#777777">SA
 Christian Dental Clinic</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">”
 refers to&nbsp;</font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><i><font color="#777777">SA
-Christian Dental Clinics</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">’
+Christian Dental Clinics</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">'
 staff, board members, cooperating attorneys, interns, volunteers, and
 consultants, all of whom are bound by law or contract to keep
 information they receive as part of their assistance to </font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><i><font color="#777777">SA
@@ -96,12 +96,12 @@ card information is collected, these credit card numbers are in a
 secure, offline location with our vendor and processing is in a
 secure online process where no credit card information is stored or
 transmitted using&nbsp;</font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><i><font color="#777777">SA
-Christian Dental Clinic’s</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">
+Christian Dental Clinic's</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">
 computers. Our technical security measures include using industry
 standard&nbsp;</font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><b><font color="#777777">128
 bit </span></b></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">encryption
 to secure the transfer of data between your browser and our payment
-processor vendor’s servers. </font></font></font><font color="#808080"><font face="Arial, serif"><font size="2" style="font-size: 10pt">You
+processor vendor's servers. </font></font></font><font color="#808080"><font face="Arial, serif"><font size="2" style="font-size: 10pt">You
 can verify this by looking for a closed lock icon at the bottom or
 top of your web browser, or looking for “https” at the beginning
 of the address of the web page. While we use encryption to protect
@@ -120,7 +120,7 @@ of Cookies</span></b></font></font></font></p>
 <p style="margin-bottom: 0in; line-height: 0.28in"><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><b><font color="#777777">C</span></b></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">ookies
 enhance your visits to the site with the site design allowing
 functionality when cookies are disabled. Cookies are alphanumeric
-identifiers transferred to your computer’s hard drive through your
+identifiers transferred to your computer's hard drive through your
 web browser. The Help portion of the toolbar on most browsers will
 tell you how to prevent your browser from accepting new cookies.
 Preventing your browser from accepting Cookies may limit some
@@ -134,7 +134,7 @@ site to help us gauge the effectiveness of the site or our content.</font></font
 <p style="margin-bottom: 0in; line-height: 0.28in"><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><b><font color="#777777">Links</span></b></font></font></font></p>
 <p style="margin-bottom: 0in; line-height: 0.28in"><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">We
 provide links on&nbsp;</font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><i><font color="#777777">SA
-Christian Dental Clinic’s</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">
+Christian Dental Clinic's</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">
 sites to other sites of interest. We do not endorse the content of
 these sites or guarantee that they will abide by this Privacy
 Statement. Your use of such linked sites is subject to the terms,
@@ -151,9 +151,9 @@ do not knowingly collect any information from children under 13.
 Further, the Sites are not directed to children under the age of 13
 and we will not knowingly collect personally identifiable information
 from children under 13.&nbsp;</font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><b><font color="#777777">WE
-STRONGLY RECOMMEND THAT PARENTS PARTICIPATE IN THEIR CHILDREN’S
+STRONGLY RECOMMEND THAT PARENTS PARTICIPATE IN THEIR CHILDREN'S
 EXPLORATION OF THE INTERNET AND ANY ONLINE SERVICES AND USE THEIR
-BROWSER’S PARENTAL CONTROLS TO LIMIT THE AREAS OF THE INTERNET TO
+BROWSER'S PARENTAL CONTROLS TO LIMIT THE AREAS OF THE INTERNET TO
 WHICH THEIR CHILDREN HAVE ACCESS.</span></b></font></font></font></p>
 <p style="margin-bottom: 0in; line-height: 0.28in"><span style="display: inline-block; border: none; padding: 0in"><font color="#777777">&nbsp;</span></font></p>
 <p style="margin-bottom: 0in; line-height: 0.28in"><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><b><font color="#777777">Mailing
@@ -257,7 +257,7 @@ donations are final.</font></font></font></p>
 agree to indemnify, defend, and hold harmless </font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><i><font color="#777777">SA
 Christian Dental Clinic</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">
 of and from any and all liability, loss, claim, expense, and damages
-including attorneys’ fees that may arise from any and all claims,
+including attorneys' fees that may arise from any and all claims,
 actions, or demands relating to your use or misuse of this site in
 any manner. By accessing and using this website, you accept these
 Terms and Conditions, as may be revised and or modified, each time
